[#4708] Add padding to hint, fix double drop on Firefox

--- a/less/v2/advancement.less
+++ b/less/v2/advancement.less
@@ -361,4 +361,7 @@
     grid-template-columns: [name] 1fr [controls] 30px;
     .item, .item-name { gap: 8px; }
   }
+  .form-group.hint {
+    padding: 0 8px 8px;
+  }
 }
